# ChessEngine

./: README.md  chess_data.ipynb  engine_config.yaml  environment.yml  learning_rate_finder.py  pyproject.toml  train.py  train_utils.py
chessengine/: attn.py  dataclass.py  dataloader.py  datamodule.py  emb.py  engine.py  engine_pl.py  evalhead.py  logging_config.py  loss.py  loss_heads.py  movehead.py  threathead.py  utils.py
chessengine/GameEnv/: chess_gui.py  self_play.py
chessengine/chess_rl/: rl_config.yaml  run_pipeline.py
chessengine/model/: dataclass.py  dataclass2.py  dataloader.py  datamodule.py  engine.py  engine_pl.py  evalhead.py  incheckhead.py  loss.py  loss_heads.py  loss_rl.py  metrics.py  prediction.py  sampler.py  utils.py
chessengine/positions.py/: position.py
chessengine/preprocessing/: pgn_data_statistics.py  position_parsing.py
chessengine/pytorchchess/: __init__.py
chessengine/rl/: __init__.py  data_module.py  dataset.py  initial_states.py  (+3 more)
data/: convert_to_stacked_shards.py  filtered_games_short2.jsonl  inspect_features.py  inspect_labels.py  visual_inspection.ipynb
preprocessing/: pgn_filtering.py  pgn_time_filtering.py  position_parsing.py
reports/: BASE_TRAINING_REPORT.ipynb  DATA_PIPELINE_REPORT.ipynb  plot_tensorboard_curves.py  rl_method.md
tests/: accuracy_computation_test.py  beam_game_sim.py  data_test.py  dataloader_test.py  datamodule_test.py  game_simulator_test.py  lightning_loop_test.py  mcts_test.py  model_profiling.py  model_test.py  test_training_beam_tree.py  training_step_test.py  ture_move_prob_test.py
(+76 files in other folders)
